add_library(HAL STATIC "")

target_sources(HAL
	PRIVATE
		stm32f3xx_hal.c
		stm32f3xx_hal_cortex.c
		stm32f3xx_hal_crc.c
		stm32f3xx_hal_crc_ex.c
		stm32f3xx_hal_dma.c
		stm32f3xx_hal_flash.c
		stm32f3xx_hal_flash_ex.c
		stm32f3xx_hal_gpio.c
		stm32f3xx_hal_i2c.c
		stm32f3xx_hal_i2c_ex.c
		stm32f3xx_hal_iwdg.c
		stm32f3xx_hal_pwr.c
		stm32f3xx_hal_pwr_ex.c
		stm32f3xx_hal_rcc.c
		stm32f3xx_hal_rcc_ex.c
		stm32f3xx_hal_spi.c
		stm32f3xx_hal_spi_ex.c
		stm32f3xx_hal_tim.c
		stm32f3xx_hal_tim_ex.c
		stm32f3xx_hal_uart.c
		stm32f3xx_hal_uart_ex.c
		stm32f3xx_hal_usart.c
		stm32f3xx_hal_wwdg.c
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/stm32_assert_template.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_adc_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_adc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_can.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_cec.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_comp_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_comp.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_conf_template.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_cortex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_crc_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_crc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_dac_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_dac.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_def.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_dma_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_dma.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_flash_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_flash.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_gpio_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_gpio.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_hrtim.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_i2c_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_i2c.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_i2s_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_i2s.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_irda_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_irda.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_iwdg.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_nand.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_nor.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_opamp_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_opamp.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_pccard.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_pcd_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_pcd.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_pwr_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_pwr.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_rcc_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_rcc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_rtc_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_rtc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_sdadc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_smartcard_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_smartcard.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_smbus.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_spi_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_spi.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_sram.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_tim_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_tim.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_tsc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_uart_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_uart.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_usart_ex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_usart.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_hal_wwdg.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_adc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_bus.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_comp.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_cortex.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_crc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_dac.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_dma.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_exti.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_fmc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_gpio.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_hrtim.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_i2c.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_iwdg.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_opamp.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_pwr.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_rcc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_rtc.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_spi.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_system.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_tim.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_usart.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_utils.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32f3xx_ll_wwdg.h
		${CMAKE_CURRENT_SOURCE_DIR}/stm32_hal_legacy.h

)
target_link_libraries(HAL
	PUBLIC
		main
		c
		m
		nosys
)